# hitl-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NEXT_STEPS.md  OAUTH_IMPLEMENTATION_SUMMARY.md  README.md  flake.nix  mcp_servers.json  oauth_integration_demo.py  pyproject.toml  test_oauth_implementation.py
.ai_rules/: init.lm  task_settings.lm
.ai_rules/llm_scripts/: python_sdk.lm  remove_static_oauth.lm
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: publish-to-pypi.yml  python-app.yml
.specs/: 00_vision.md  01_system_context.md  02_roadmap.md  active_sprint.md
.specs/templates/: feature_spec.md
docs/: MIGRATION_TO_CLOUD.md
docs/mcp/: fastmcp-bearer-auth.md  fastmcp-intro.md  fastmcp-testing-guide.md
hitl_cli/: __init__.py  api_client.py  auth.py  config.py  crypto.py  main.py  mcp_client.py  models.py  proxy_handler.py  proxy_handler_v2.py  sdk.py
hitl_cli/hooks/: codex_notify.py  review_and_continue.py
hitl_cli/services/: __init__.py  file_service.py
specs/: phase12_migration_to_cloud_cli.md
tests/: test_api_client.py  test_auth_flow.py  test_notify_command.py  test_oauth_dynamic_registration.py  test_proxy_key_management.py  test_proxy_mode.py  test_request_encryption.py  test_response_decryption.py  test_tool_interception.py
tests/commands/: test_api_key_commands.py  test_auth_commands.py  test_e2ee_commands.py  test_proxy_command.py  test_request_command.py
tests/core/: test_api_client.py  test_api_key_auth.py  test_auth_logic.py  test_crypto.py  test_fastmcp_proxy_server.py  test_file_service.py  test_issue_28_api_key_rest.py  test_mcp_client.py  test_mcp_client_attachments_parsing.py  test_models_file_attachments.py  test_oauth_dynamic_registration.py  test_proxy_handler.py  test_sdk.py  test_timeout.py
tests/hooks/: test_codex_notify.py  test_review_and_continue.py
